--- a/login.html
+++ b/login.html
@@ -14,6 +14,18 @@
     
 </head>
 <body class="font-sans text-gray-800">
+    <header class="bg-white shadow-md">
+        <div class="max-w-6xl mx-auto px-4 py-4 flex items-center justify-between">
+          <div class="text-xl font-bold text-primary font-pacifico">RIT</div>
+          <nav class="space-x-6 text-sm font-medium">
+            <a href="home.html" class="text-gray-700 hover:text-primary transition">Home</a>
+            <a href="#" class="text-gray-700 hover:text-primary transition">Login</a>
+            <a href="#" class="text-gray-700 hover:text-primary transition">Menu</a>
+            <a href="#" class="text-gray-700 hover:text-primary transition">Orders</a>
+          </nav>
+        </div>
+      </header>
+    
     <div class="w-full max-w-md px-8 py-10 form-container rounded-lg">
         <div class="text-center mb-8 ">
             <h1 class="text-2xl font-bold mb-1">Welcome Back</h1>
