--- a/login.html
+++ b/login.html
@@ -19,9 +19,9 @@
           <div class="text-xl font-bold text-primary font-pacifico">RIT</div>
           <nav class="space-x-6 text-sm font-medium">
             <a href="home.html" class="text-gray-700 hover:text-primary transition">Home</a>
-            <a href="#" class="text-gray-700 hover:text-primary transition">Login</a>
-            <a href="#" class="text-gray-700 hover:text-primary transition">Menu</a>
-            <a href="#" class="text-gray-700 hover:text-primary transition">Orders</a>
+            <a href="login.html" class="text-gray-700 hover:text-primary transition">Login</a>
+            <a href="checkout.html" class="text-gray-700 hover:text-primary transition">Menu</a>
+            <a href="orddum.html" class="text-gray-700 hover:text-primary transition">Orders</a>
           </nav>
         </div>
       </header>
